Bug 78659 - DOCX : CORRUPTION : FIle gets corrupt after Roundtrip
Summary: DOCX : CORRUPTION : FIle gets corrupt after Roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-13 12:50 UTC by pallavi.jadhav
Modified: 2014-05-22 13:37 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Contains SDT in header, Watermark in file (98.45 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-13 12:50 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-05-13 12:50:56 UTC
Created attachment 98976 [details]
Contains SDT in header, Watermark in file

Steps to reproduce :
1] Open attached file LO
2] Perform save_as to DOCX
3] Open saved file in MS Office-2010

Current behavior :
File gets corrupt after Roundtrip.

Expected behavior :
File should get open successfully in MS Office-2010 after Roundtrip.

Issue :
Problem is in header1.xml, sdt related.
Comment 1 Jorendc 2014-05-15 18:43:59 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: cc4a3f1a88afff114311bddf462ca4bc00a485c7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-05-12_09:05:53

Kind regards,
Joren
Comment 2 Commit Notification 2014-05-20 08:54:53 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1870ed0e4f63e9c58476e7dcd160e04eb866e0f5

fdo#78659:FIle geting corrupted after Roundtrip due to fieldchar.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-05-20 08:56:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4740dbecfce958c2c707d8cc92e6dbe52f4b71b

fdo#78659 make testcase minimal



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 retired 2014-05-22 13:36:58 UTC
Verified with LO Version: 4.4.0.0.alpha0+
Build ID: 2c61edfdf57dabbd86ecc440444b6b00443f916a
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-05-22_01:02:26

on OSX 10.9.3 file saved under LO 4.4 as docx and docx file opens fine with Word 2011.

Tried testing with 4.2.4.2 as well and was unable to even save as docx. "File could not be written."

So assuming this is fixed. Please re-open if I'm mistaken.