fdo#78659:FIle geting corrupted after Roundtrip due to fieldchar.

In a hyperlink, the field with fieldchartype="end" is getting addeded eventhough there is no begin for that field.

Change-Id: I50df6efc63fc9a66b146d4a861ae4bd654b4a3c6
Reviewed-on: https://gerrit.libreoffice.org/9368
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>